--- a/src/guestbook/config/crd/bases/webapp.my.domain_guestbooks.yaml
+++ b/src/guestbook/config/crd/bases/webapp.my.domain_guestbooks.yaml
@@ -43,6 +43,12 @@ spec:
           type: object
         status:
           description: GuestbookStatus defines the observed state of Guestbook
+          properties:
+            value:
+              description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
+                of cluster Important: Run "make" to regenerate code after modifying
+                this file'
+              type: string
           type: object
       type: object
   version: v1
