--- a/src/guestbook/config/crd/bases/webapp.my.domain_guestbooks.yaml
+++ b/src/guestbook/config/crd/bases/webapp.my.domain_guestbooks.yaml
@@ -44,7 +44,7 @@ spec:
         status:
           description: GuestbookStatus defines the observed state of Guestbook
           properties:
-            value:
+            state:
               description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
                 of cluster Important: Run "make" to regenerate code after modifying
                 this file'
