--- a/src/guestbook/config/manager/kustomization.yaml
+++ b/src/guestbook/config/manager/kustomization.yaml
@@ -1,5 +1,6 @@
 resources:
 - manager_secret.yaml
+- manager_pvc.yaml
 - manager.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
