--- a/src/guestbook/config/manager/manager.yaml
+++ b/src/guestbook/config/manager/manager.yaml
@@ -6,7 +6,7 @@ metadata:
   name: system
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: controller-manager
   namespace: system
@@ -16,6 +16,7 @@ spec:
   selector:
     matchLabels:
       control-plane: controller-manager
+  serviceName: controller-manager
   replicas: 1
   template:
     metadata:
